chart filter overflow issue solved

--- a/LESS/trade-terminal.less
+++ b/LESS/trade-terminal.less
@@ -42,10 +42,6 @@
         content: none;
     }
 
-    .actions-header {
-        height: 30px;
-    }
-
     .arrow {
         position: absolute;
         top: 20px;
